# stm32f4disc-demo

./: .gitlab-ci.yml  Cargo.toml  LICENSE.md  README.md  memory.x  openocd.cfg  openocd.gdb
.cargo/: config
examples/: rtfm.rs  serial.rs  spi.rs
src/: led.rs  led_ring.rs  lib.rs  main.rs
