[package]
name = "stm32f4-demo"
version = "0.1.0"
authors = ["Paul van Tilburg <paul@luon.net>"]
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
heapless = "0.4.2"
panic-halt = "0.2.0"
panic-semihosting = "0.5.1"

[dependencies.cortex-m-rtfm]
version = "0.4.2"
features = ["timer-queue"]

[dependencies.hal]
package = "stm32f4xx-hal"
version = "0.3.0"
features = ["rt", "stm32f407"]

[[bin]]
name = "stm32f4-demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
