[package]
edition = "2018"
name = "stm32f4disc-demo"
version = "0.1.0"
categories = ["embedded", "no-std"]
description = "Some STM32F4DISCOVERY board demo application"
license = "0BSD"
authors = ["Paul van Tilburg <paul@luon.net>"]
readme = "README.md"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.5"
cortex-m-semihosting = "0.3.2"
heapless = "0.4.2"
panic-semihosting = "0.5.1"

[dependencies.cortex-m-rtfm]
version = "0.4.2"
features = ["timer-queue"]

[dependencies.hal]
package = "stm32f4xx-hal"
version = "0.3.0"
features = ["rt", "stm32f407"]

[lib]
name = "stm32f4disc_demo"
path = "src/lib.rs"

[[bin]]
name = "stm32f4disc-demo"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
